[package]
name = "notary-server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
ws_stream_tungstenite = {version = "0.10", features = ["tokio_io"]}
async-std = "1.12.0"
async-tungstenite = {version="0.22", features = ["tokio-runtime", "async-std-runtime"]}
asynchronous-codec = "0.6.2"
tungstenite = "0.19"
bytes = "1.4.0"
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-rustls = { version = "0.24.1" }
eyre = "0.6.8"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
tracing = "0.1"
tracing-subscriber = "0.3"
p256 = {version = "0.13", features = ["ecdsa"]}
async-tls = { version = "0.12", default-features = false, features = [
    "client",
] }

tlsn-verifier = { git = "https://github.com/chcharcharlie/tlsn", branch="jomo-new" }

[[example]]
name = "notary"
path = "src/main.rs"