[workspace]
members = ["stream-cipher", "block-cipher"]
resolver = "2"

[workspace.dependencies]
# tlsn
# mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "a1ac9c5" }
# mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "a1ac9c5" }
mpz-circuits = { git = "https://github.com/chcharcharlie/mpz", branch = "jomo" }
mpz-garble = { git = "https://github.com/chcharcharlie/mpz", branch = "jomo" }
# tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "f3e3f07" }
tlsn-utils = { git = "https://github.com/chcharcharlie/tlsn-utils", branch = "jomo" }

# crypto
aes = "0.8"
ctr = "0.9.2"
cipher = "0.4.3"

# async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false }

# testing
rstest = "0.17"
criterion = "0.5"

# error/log
thiserror = "1"
tracing = "0.1"

# misc
derive_builder = "0.12"

# std::time for wasm
# https://github.com/daxpedda/web-time/tree/main
web-time = "0.2"