[package]
name = "uid-mux"
version = "0.1.0"
authors = ["TLSNotary Team"]
description = "Multiplex connections asynchronously."
keywords = ["multiplex", "channel", "futures", "async"]
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
tracing = ["dep:tracing"]

[dependencies]
# tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "f3e3f07" }
tlsn-utils-aio = { git = "https://github.com/chcharcharlie/tlsn-utils", branch = "jomo" }

async-trait = "0.1"
futures = "0.3"
yamux = "0.11"
tracing = { version = "0.1", optional = true }

# std::time for wasm
# https://github.com/daxpedda/web-time/tree/main
web-time = "0.2"

[dev-dependencies]
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
