[package]
name = "tlsn-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ws_stream_tungstenite = {version = "0.10", features = ["tokio_io"]}
async-std = "1.12.0"
async-tungstenite = {version="0.22", features = ["tokio-runtime", "async-std-runtime"]}
asynchronous-codec = "0.6.2"
tungstenite = "0.19"
bytes = "1.4.0"
ws_stream_wasm = {version = "0.7", features = ["tokio_io"]}
url = "^2"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "console",
]

[dev-dependencies]
tlsn-prover = { workspace = true, features = ["tracing"] }
tlsn-notary.workspace = true
tlsn-core.workspace = true
tlsn-tls-core.workspace = true
tlsn-tls-client.workspace = true
notary-server = { version = "0.1.0", git = "https://github.com/tlsnotary/notary-server" }
mpz-core.workspace = true

futures.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

hyper = { version = "0.14", features = ["client", "http1"] }

p256 = { workspace = true, features = ["ecdsa"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
webpki-roots.workspace = true

async-tls = { version = "0.12", default-features = false, features = [
    "client",
] }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
tokio-rustls = { version = "0.24.1" }
dotenv = "0.15.0"

[[example]]
name = "simple_prover"
path = "simple_prover.rs"

[[example]]
name = "simple_verifier"
path = "simple_verifier.rs"

[[example]]
name = "twitter_dm"
path = "twitter_dm.rs"

[[example]]
name = "simple_notary"
path = "simple_notary.rs"

[[example]]
name = "jomo_fake_api"
path = "jomo_fake_api.rs"